--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "framer-motion": "^12.23.26",
     "react-dom": "^19.2.3",
     "lucide-react": "^0.561.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "@supabase/supabase-js": "2.39.3",
+    "@google/genai": "^1.33.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
